--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-# version: 2.1
+version: 2.1
 
 # commands:
 #   destroy-environment:
@@ -32,22 +32,24 @@
 #               exit 1
 #             fi
             
-# jobs:
-#   build-frontend:
-#     docker:
-#       - image: circleci/node:13.8.0
-#     steps:
-#       - checkout
-#       - restore_cache:
-#           keys: [frontend-build]
-#       - run:
-#           name: Build front-end
-#           command: |
-#             # Your code here
-#             exit 1
-#       - save_cache:
-#           paths: [frontend/node_modules]
-#           key: frontend-build
+jobs:
+  build-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [frontend-build]
+      - run:
+          name: Build front-end
+          command: |
+            # Your code here
+            cd frontend
+            npm install
+            npm run build
+      - save_cache:
+          paths: [frontend/node_modules]
+          key: frontend-build
 
 #   build-backend:
 #     docker:
@@ -263,10 +265,10 @@
 #             fi
             
 
-# workflows:
-#   default:
-#     jobs:
-#       - build-frontend
+workflows:
+  default:
+    jobs:
+      - build-frontend
 #       - build-backend
 #       - test-frontend:
 #           requires: [build-frontend]
