--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,7 +113,7 @@ jobs:
           command: |
             cd frontend
             npm install
-            npm audit fix --audit-level=critical --force
+            # npm install oauth-sign@^0.9.0
             npm audit --audit-level=critical
 
   scan-backend:
@@ -131,8 +131,7 @@ jobs:
           command: |
             cd backend
             npm install
-            npm audit fix --audit-level=critical --force
-            npm audit fix --audit-level=critical --force
+            # npm install oauth-sign@^0.9.0
             npm audit --audit-level=critical
  
 
