--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,7 +114,9 @@ jobs:
             cd frontend
             npm install
             # npm install oauth-sign@^0.9.0
+            npm audit fix --audit-level=critical
             npm audit --audit-level=critical
+
 
   scan-backend:
     docker:
@@ -132,6 +134,7 @@ jobs:
             cd backend
             npm install
             # npm install oauth-sign@^0.9.0
+            npm audit fix --audit-level=critical
             npm audit --audit-level=critical
  
 
